// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBar.vue renders correctly 1`] = `
<div class="bar-container">
  <div class="bar-container__fill" style="background-color: rgb(34, 76, 165); width: 50%;"></div>
</div>
`;

exports[`VBar.vue renders correctly if current > max 1`] = `
<div class="bar-container">
  <div class="bar-container__fill" style="background-color: rgb(34, 76, 165); width: 100%;"></div>
</div>
`;
